unpackaged/main/default/objects/Payment_Request__c/fields/Approval_Notification_Email__c.field-meta.xml
<CustomField>
    <fullName>Approval_Notification_Email__c</fullName>
    <inlineHelpText>Enter the email address of the person who should be alerted when a Payment Request is approved.</inlineHelpText>
    <label>Approval Notification Email</label>
    <type>Email</type>
</CustomField>