unpackaged/main/default/objects/Payment_Request__c/fields/Bank_Zip__c.field-meta.xml
<CustomField>
    <fullName>Bank_Zip__c</fullName>
    <label>Bank Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>