unpackaged/main/default/objects/Payment_Request__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>Opportunity__r.Legal_Name__c</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>