unpackaged/main/default/objects/Payment_Request__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <formula>CreatedBy.Department</formula>
    <label>Department</label>
    <type>Text</type>
</CustomField>