unpackaged/main/default/objects/Payment_Request__c/fields/Final_Fund__c.field-meta.xml
<CustomField>
    <fullName>Final_Fund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Final Fund</label>
    <type>Checkbox</type>
</CustomField>