unpackaged/main/default/objects/Payment_Request__c/fields/Forwarding_Instacover_Premium_Payment_s__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Instacover_Premium_Payment_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forwarding Instacover Premium Payment(s)</label>
    <type>Checkbox</type>
</CustomField>