unpackaged/main/default/objects/Payment_Request__c/fields/Forwarding_Misdirected_Payment_to_Lender__c.field-meta.xml
<CustomField>
    <fullName>Forwarding_Misdirected_Payment_to_Lender__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Forwarding Misdirected Payment to Lender</label>
    <type>Checkbox</type>
</CustomField>