unpackaged/main/default/objects/Payment_Request__c/fields/Intermediate_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Bank_Name__c</fullName>
    <label>Intermediate Bank Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>