unpackaged/main/default/objects/Payment_Request__c/fields/Intermediate_Bank_Routing_Number__c.field-meta.xml
<CustomField>
    <fullName>Intermediate_Bank_Routing_Number__c</fullName>
    <label>Intermediate Bank Routing Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>