unpackaged/main/default/objects/Payment_Request__c/fields/Internal_Funding__c.field-meta.xml
<CustomField>
    <fullName>Internal_Funding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Internal Funding</label>
    <type>Checkbox</type>
</CustomField>