unpackaged/main/default/objects/Payment_Request__c/fields/Less_Doc_Fee__c.field-meta.xml
<CustomField>
    <fullName>Less_Doc_Fee__c</fullName>
    <label>Less: Doc Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>