unpackaged/main/default/objects/Payment_Request__c/fields/Less_Other__c.field-meta.xml
<CustomField>
    <fullName>Less_Other__c</fullName>
    <label>Less: Other</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>