unpackaged/main/default/objects/Payment_Request__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <formula>CreatedBy.Full_Name__c</formula>
    <label>Name</label>
    <type>Text</type>
</CustomField>