unpackaged/main/default/objects/Payment_Request__c/fields/Net_Amount_to_be_Refunded__c.field-meta.xml
<CustomField>
    <fullName>Net_Amount_to_be_Refunded__c</fullName>
    <formula>Total_Amount_of_Check_s__c - Less_Doc_Fee__c - Less_Site_Inspection_Fee__c - Less_UCC_Search_Fee__c - Less_Other__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Amount to be Refunded</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>