unpackaged/main/default/objects/Payment_Request__c/fields/No_Split_Actual_Amount_Offered__c.field-meta.xml
<CustomField>
    <fullName>No_Split_Actual_Amount_Offered__c</fullName>
    <label>No Split / Actual Amount Offered</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>