unpackaged/main/default/objects/Payment_Request__c/fields/Other_Funding_Related_Expense__c.field-meta.xml
<CustomField>
    <fullName>Other_Funding_Related_Expense__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Other Funding Related Expense</label>
    <type>Checkbox</type>
</CustomField>