unpackaged/main/default/objects/Payment_Request__c/fields/Other_Funding_Related_Expense_Details__c.field-meta.xml
<CustomField>
    <fullName>Other_Funding_Related_Expense_Details__c</fullName>
    <label>Other Funding Related Expense Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>