unpackaged/main/default/objects/Payment_Request__c/fields/Overnight__c.field-meta.xml
<CustomField>
    <fullName>Overnight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Overnight</label>
    <type>Checkbox</type>
</CustomField>