unpackaged/main/default/objects/Payment_Request__c/fields/Payable_To__c.field-meta.xml
<CustomField>
    <fullName>Payable_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payable To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>