unpackaged/main/default/objects/Payment_Request__c/fields/Payment_To__c.field-meta.xml
<CustomField>
    <fullName>Payment_To__c</fullName>
    <label>Payment To</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer</fullName>
            </value>
            <value>
                <fullName>Vendor</fullName>
            </value>
            <value>
                <fullName>Lender</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>