unpackaged/main/default/objects/Payment_Request__c/fields/Prefund__c.field-meta.xml
<CustomField>
    <fullName>Prefund__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prefund</label>
    <type>Checkbox</type>
</CustomField>