unpackaged/main/default/objects/Payment_Request__c/fields/Reason_For_Check_Request_Details__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Check_Request_Details__c</fullName>
    <label>Reason For Check Request Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>