unpackaged/main/default/objects/Payment_Request__c/fields/Refund_Advanced_Deposit_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Refund_Advanced_Deposit_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund Advanced Deposit to Customer</label>
    <type>Checkbox</type>
</CustomField>