unpackaged/main/default/objects/Payment_Request__c/fields/Refund_due_to_Lease_Rebook_Restructure__c.field-meta.xml
<CustomField>
    <fullName>Refund_due_to_Lease_Rebook_Restructure__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Refund due to Lease Rebook/Restructure</label>
    <type>Checkbox</type>
</CustomField>