unpackaged/main/default/objects/Payment_Request__c/fields/Refund_of_Proceeds_due_to_Overpayment__c.field-meta.xml
<CustomField>
    <fullName>Refund_of_Proceeds_due_to_Overpayment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field will be checked if the payment is to refund an overages in proceeds to back to the lender.</description>
    <inlineHelpText>This field will be checked if the payment is to refund an overages in proceeds to back to the lender.</inlineHelpText>
    <label>Refund of Proceeds due to Overpayment</label>
    <type>Checkbox</type>
</CustomField>