unpackaged/main/default/objects/Payment_Request__c/fields/Remit_To_Address__c.field-meta.xml
<CustomField>
    <fullName>Remit_To_Address__c</fullName>
    <label>Remit To Address</label>
    <type>TextArea</type>
</CustomField>