unpackaged/main/default/objects/Payment_Request__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <formula>Opportunity__r.Owner.Full_Name__c</formula>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>