unpackaged/main/default/objects/Payment_Request__c/fields/Split_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Split_Funding_Amount__c</fullName>
    <label>Split Funding Amount ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>