unpackaged/main/default/objects/Payment_Request__c/fields/Split_Payment_Processed__c.field-meta.xml
<CustomField>
    <fullName>Split_Payment_Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Split Payment Processed</label>
    <type>Checkbox</type>
</CustomField>