unpackaged/main/default/objects/Payment_Request__c/fields/Total_Amount_of_Check_s__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_of_Check_s__c</fullName>
    <label>Total Amount of Check(s)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>