unpackaged/main/default/objects/Payment_Request__c/fields/Vendor_Check_Other_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Check_Other_Reason_Details__c</fullName>
    <label>Vendor Check Other Reason Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>