unpackaged/main/default/objects/Payment_Request__c/fields/Vendor_Check_Reason__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Check_Reason__c</fullName>
    <label>Vendor Check Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Internal Pre-funding</fullName>
            </value>
            <value>
                <fullName>Internal Funding</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>