unpackaged/main/default/objects/Payment_Request__c/recordTypes/Split_Funding_Check.recordType-meta.xml
<RecordType>
    <fullName>Split_Funding_Check</fullName>
    <active>true</active>
    <description>This record type will be for WC deals that require split funding.</description>
    <label>Split Funding - Check</label>
</RecordType>