unpackaged/main/default/objects/Payment_Request__c/recordTypes/Split_Funding_Wire.recordType-meta.xml
<RecordType>
    <fullName>Split_Funding_Wire</fullName>
    <active>true</active>
    <description>This record type will be used for Split Payments when the payee requires a wire.</description>
    <label>Split Funding - Wire</label>
</RecordType>