unpackaged/main/default/objects/Payment_Request__c/recordTypes/Wire.recordType-meta.xml
<RecordType>
    <fullName>Wire</fullName>
    <active>true</active>
    <label>Wire</label>
</RecordType>