unpackaged/main/default/objects/Payment_Request__c/validationRules/Cannot_Edit_an_Approved_Payment_Request.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Edit_an_Approved_Payment_Request</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Status__c, 'Approved') || ISPICKVAL(Status__c, 'Paid')) &amp;&amp; ($Profile.Name &lt;&gt; 'FPC - Accounting User') &amp;&amp; ($Profile.Name &lt;&gt; 'System Administrator')</errorConditionFormula>
    <errorMessage>Only Accounting can edit this record after it has been approved.</errorMessage>
</ValidationRule>